# portal-backend

./: pyproject.toml  run.py  settings.py
app/: docs.py  main.py
app/resources/assessment/: controllers.py  model.py  routes.py
app/resources/assessmentQuestions/: controllers.py  model.py  routes.py
app/resources/candidate/: controllers.py  model.py  routes.py
app/resources/examination/: controllers.py  model.py  routes.py
app/resources/jobs/: controllers.py  model.py  routes.py
app/resources/portfolio/: controllers.py  model.py  routes.py
app/resources/question/: controllers.py  model.py  routes.py
app/resources/services/: controllers.py  model.py  routes.py
migrations/models/: 0_20230907171616_init.py  1_20230907171954_update.py  2_20230907172056_update.py  3_20230908131629_update.py  4_20230908174214_update.py  5_20230908181852_update.py  6_20230914173159_update.py
